# NetClipboard

./: .gitignore  LICENSE  README.md
native/: CMakeLists.txt  clip_c_macClipboardNative.h  clip_c_macClipboardNative.mm
src/: Cancelable.java  ClipboardIO.java  ClipboardListener.java  CompressTest.java  Compresser.java  Compressor.java  Decompressor.java  FileIOTest.java  FileReceiver.java  FileSender.java  FileTransfer.java  HTMLSelection.java  MFTest.java  Main.java  MultipleFormatInBuffer.java  MultipleFormatInputStream.java  MultipleFormatOutBuffer.java  MultipleFormatOutputStream.java  PortAllocator.java  TransferConnector.java  libClipboardJNI.dylib  module-info.java
src/FileChooser/: NativeJFileChooser.java
src/Keygen/: Keygen.java
src/clip/: ClipboardIO.java  FilesTransferable.java  MacFilesClipboard.java
src/filechooser/: NativeJFileChooser.java  package-info.java
src/files/: Cancelable.java  FileIOTest.java  FileReceiver.java  FileSender.java  FilesTransferable.java  SkipableZstdInputStream.java
src/format/: DataFormat.java  FormattedInStream.java  FormattedOutStream.java  MFTest.java  MultipleFormatInStream.java  MultipleFormatOutStream.java  TransferFormat.java
src/key/: KeyUtil.java  Keygen.java
src/keygen/: Keygen.java
src/main/: ClipboardIO.java  Main.java
src/net/: FileIOTest.java  FileTransfer.java  FileTransferMode.java  MFTest.java  MultipleFormatInBuffer.java  MultipleFormatInStream.java  MultipleFormatOutBuffer.java  MultipleFormatOutStream.java  PortAllocator.java  TLSHandler.java  TransferConnector.java
src/ui/: ClipTray.java  (+6 more)
(+28 files in other folders)
